--- a/0x01-CSS_advanced/styles/16-style.css
+++ b/0x01-CSS_advanced/styles/16-style.css
@@ -93,6 +93,6 @@ a:active {
 
 .container {
     width: 960px;
-    margin-left: 50%;
-    margin-right: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
