UPDATE: correcting specifity

--- a/0x01-CSS_advanced/styles/18-style.css
+++ b/0x01-CSS_advanced/styles/18-style.css
@@ -139,7 +139,7 @@ nav {
     text-align: center;
 }
 
-.nav-item > .nav {
+.nav-item .nav {
 font-family: var(--nav-item-font-family);
 font-weight: var(--nav-item-font-weight);
 font-size: var(--nav-item-font-size);
@@ -148,11 +148,11 @@ display: var(--nav-item-display);
 margin: var(--nav-item-margin);
 }
 
-.nav-link > .nav {
+.nav-link .nav {
     display: block;
     padding: 50%, 50%, 0, 0;
 }
 
-.nav-link:hover > .nav {
+.nav-link:hover .nav {
 color: var(--nav-item-link-hover);
 }
