--- a/0x01-CSS_advanced/styles/21-style.css
+++ b/0x01-CSS_advanced/styles/21-style.css
@@ -192,7 +192,7 @@ footer ul {
     clear: both;
 }
 
-[class^="col-"]:not(.col-1-2, .col-1-3) {
+[class^="col-"] {
     float: left;
     padding: 0.5rem;
 }
