--- a/0x01-CSS_advanced/styles/22-style.css
+++ b/0x01-CSS_advanced/styles/22-style.css
@@ -43,6 +43,12 @@
     box-sizing: border-box;
 }
 
+[data-section-theme=“dark”] {
+    --text-color: var(--color-white);
+    --section-title-color: var(--color-white);
+    background-color: var(--color-black);
+}
+
 html {
     scroll-behavior: smooth;
     font-size: 62.5%;
@@ -191,10 +197,4 @@ footer ul {
 [class^="col-"] {
     float: left;
     padding: 0.5rem;
-}
-
-*[data-section-theme=“dark”] {
-    --text-color: var(--color-white);
-    --section-title-color: var(--color-white);
-    background-color: var(--color-black);
 }
