UPDATE: 23-style; fill color

--- a/0x01-CSS_advanced/styles/23-style.css
+++ b/0x01-CSS_advanced/styles/23-style.css
@@ -196,8 +196,8 @@ footer ul {
     display: block;
 }
 
-.social.link svg {
-    color: var(--text-color);
+.social.link > svg {
+    fill: var(--text-color);
 }
 
 .row::after {
