--- a/0x01-CSS_advanced/styles/23-style.css
+++ b/0x01-CSS_advanced/styles/23-style.css
@@ -192,11 +192,11 @@ footer ul {
     color: var(--text-color)
 }
 
-.social.link {
+.social-link {
     display: block;
 }
 
-.social.link > svg {
+.social-link > svg {
     fill: var(--text-color);
 }
 
