--- a/0x01-CSS_advanced/styles/30-style.css
+++ b/0x01-CSS_advanced/styles/30-style.css
@@ -325,10 +325,10 @@ header {
     height: 30rem;
     width: 100%;
     object-fit: cover;
-
+    vertical-align: bottom;
 }
 
-.card-inner .card-work {
+.card-work .card-inner {
     position: absolute;
     top: -0.1rem;
     left: 1rem;
