ADD: 5-nested_child.scss

--- a/0x00-sass_scss/5-nested_child.scss
+++ b/0x00-sass_scss/5-nested_child.scss
@@ -3,7 +3,7 @@ $colorRedT : #FF0000;
 
 body {
     color: $colorBodyT;
-    .red {
-        color: $colorRedT;
+    > .red {
+        color: $colorRedT
     }
 }
